# LimesOUTPOST

./: .gitignore  Dockerfile  LICENSE  README.txt  docker-compose.yml  pyproject.toml  requirements.txt  seed_db.py
api/: main.py
limes_outpost/: __init__.py  config.py
limes_outpost-web/: package-lock.json  package.json
limes_outpost-web/app/: globals.css  layout.tsx
limes_outpost-web/lib/: api.ts
limes_outpost-web/store/: index.ts  package-lock.json  package.json  proxy.ts  tailwind.config.ts
limes_outpost-web/types/: index.ts
limes_outpost/agents/: archivist_agent.py  base_agent.py  blog_formatter_agent.py  blog_strategy_agent.py  blog_writer_agent.py  composer_agent.py  draft_agent.py  email_publisher_agent.py  inbox_agent.py  intel_agent.py  intelstrategy_agent.py  mention_agent.py  orchestrator.py  publish_scheduler.py  publisher_agent.py  pulse_agent.py  reply_agent.py  script_agent.py  social_script_agent.py  storage_agent.py  strategy_agent.py  trend_sniper_agent.py  triage_agent.py  twitter_publisher_agent.py  visual_agent.py  voiceover_agent.py  youtube_analytics_agent.py
limes_outpost/api/: dependencies.py
limes_outpost/contracts/: blog_formatter.json  blog_strategy.json  blog_writer.json  composer.json  email_draft.json  script.json  social_reply.json  social_script.json  strategy.json  visual.json  voiceover.json
limes_outpost/integrations/: channel_adapter.py  discord.py
limes_outpost/tasks/: __init__.py  celery_app.py  email_tasks.py  pipeline_tasks.py  social_tasks.py
migrations/: init.sql
worker/: main.py
(+51 files in other folders)
